--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,13 @@
 {
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
+    "jsx": "react-jsx",
+    "jsxImportSource": "react",
     "baseUrl": ".",
     "paths": {
-      "@components/*":["src/components/*"],
-      "@layouts/*":["src/layouts/*"],
-      "@assets/*":["src/assets/*"],
-      "@constants/*":["src/constants/*"],
-    },
-    "jsx": "react-jsx",
-    "jsxImportSource": "react"
+      "@/*": [
+        "./src/*"
+      ]
+    }
   }
 }
