--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,22 +16,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Set up Git repository
-        uses: actions/checkout@v4 # Updated to v4
-      
-      - name: latex2pdf
-        id: compile-latex-document
-        uses: thomas-chauvet/latex2pdf-action@1.1.0
+        uses: actions/checkout@v4
+
+      # Uses a pre-built Full TeX Live environment.
+      # No need to list packages manually anymore.
+      - name: Compile LaTeX
+        uses: xu-cheng/latex-action@v3
         with:
-          output_dir: output
-          main_latex_file: resume.tex
-          ctan_packages: titlesec marvosym enumitem hyperref fancyhdr babel-english preprint tools graphics latexsym lua-uni-algos etoolbox xcolor
-      
-      # Upload the PDF so the next job can see it
+          root_file: resume.tex
+
       - name: Upload PDF artifact
         uses: actions/upload-artifact@v4
         with:
           name: resume-artifact
-          path: output/test.pdf
+          # Note: The file is now in the root, not 'output/'
+          path: test.pdf 
           if-no-files-found: error
 
   # JOB 2: Build the Astro Site (including the PDF)
